Loader implementation in LevelListActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">DP Game</string>
-    <string name="title_activity_level_list">Play</string>
+    <string name="title_activity_level_list">Available levels</string>
 </resources>
